New entries should be added at the top

2004-12-11 Added ion and ioff to pylab interface - JDH

2004-12-11 backend_template.py: delete FigureCanvasTemplate.realize() - most
           backends don't use it and its no longer needed

           backend_ps.py, backend_svg.py: delete show() and 
           draw_if_interactive() - they are not needed for image backends

           backend_svg.py: write direct to file instead of StringIO
           - SC

2004-12-10 Added zorder to artists to control drawing order of lines,
           patches and text in axes.  See examples/zoder_demo.py - JDH

2004-12-10 Fixed colorbar bug with scatter - JDH

2004-12-10 Added Nadia Dencheva <dencheva@stsci.edu> contour code - JDH

2004-12-10 backend_cairo.py: got mathtext working - SC

2004-12-09 Added Norm Peterson's svg clipping patch

2004-12-09 Added Matthew Newville's wx printing patch

2004-12-09 Migrated matlab to pylab - JDH

2004-12-09 backend_gtk.py: split into two parts 
           - backend_gdk.py - an image backend
           - backend_gtk.py - A GUI backend that uses GDK - SC

2004-12-08 backend_gtk.py: remove quit_after_print_xvfb(*args), show_xvfb(), 
	   Dialog_MeasureTool(gtk.Dialog) one month after sending mail to
           matplotlib-users asking if anyone still uses these functions - SC

2004-12-02 backend_bases.py, backend_template.py: updated some of the method
           documentation to make them consistent with each other - SC

2004-12-04 Fixed multiple bindings per event for TkAgg mpl_connect and
	mpl_disconnect.  Added a "test_disconnect" command line 
	parameter to coords_demo.py  JTM

2004-12-04 Fixed some legend bugs JDH

2004-11-30 Added over command for oneoff over plots.  Eg over(plot, x,
           y, lw=2).  Works with any plot function.
 
2004-11-30 Added bbox property to text - JDH

2004-11-29 Zoom to rect now respect reversed axes limits (for both 
           linear and log axes). - GL
           